# weekend-raytracing

./: .gitignore  Cargo.toml
src/: camera.rs  float3.rs  geometry.rs  hitable.rs  main.rs  material.rs  math.rs  prelude.rs  ray.rs
