[package]
name = "one-weekend"
version = "0.1.0"
authors = ["Chris Butler <chrisbutler296@gmail.com>"]
edition = "2018"

[dependencies]
ctrlc = "3.1"
rand  = "0.5.5"
rayon = "1.0"
structopt = "0.2.12"
pbr = "1"

[dependencies.image]
version = "^0.20"
default-features = false
features = ["png_codec"]

[profile.release]
debug = true

[profile.dev]
debug = true
